--- a/shoppingAPPMVC_Demo_DevOps/Views/Home/Products.cshtml
+++ b/shoppingAPPMVC_Demo_DevOps/Views/Home/Products.cshtml
@@ -1,3 +1,8 @@
 ﻿
 
 <h1> Products List Comeing Soon </h1>
+
+
+<p>We will have lots and lots of products you to buy and at a very low price, discounts will be high
+    please keep checking this page
+</p>
