--- a/shoppingAPPMVC_Demo_DevOps/Views/Home/Products.cshtml
+++ b/shoppingAPPMVC_Demo_DevOps/Views/Home/Products.cshtml
@@ -6,3 +6,6 @@
 <p>We will have lots and lots of products you to buy and at a very low price, discounts will be high
     please keep checking this page
 </p>
+
+
+<h4> Auto CI Check </h4>
