--- a/shoppingAPPMVC_Demo_DevOps/Views/Home/Index.cshtml
+++ b/shoppingAPPMVC_Demo_DevOps/Views/Home/Index.cshtml
@@ -6,5 +6,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     
-    <h2> Hello this is a test </h2>
+    <h2> Hello this is a CI test </h2>
+    
+    <h2> This is for release test </h2>
 </div>
